correcion de la palabra inicio

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
     <!-- contenido principal   -->
     <main>
-        <h1> Incio</h1>
+        <h1> Inicio </h1>
         <h2> ¡ Bienvenidos a la pagina oficial de Taylor Swift ! </h2>
         <p> Aqui podras encontrar todo lo relacionado con la artista, desde su musica hasta su merchandising </p>
         <p> Esperamos que disfrutes de tu estadia en nuestra pagina </p>
