--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,58 +8,111 @@
     <!-- font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
-  <!--  CSS -->
+    <link
+        href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap"
+        rel="stylesheet">
+    <!--  CSS -->
     <link rel="stylesheet" href="style.css">
+    <!-- bootstrap -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.4/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-DQvkBjpPgn7RC31MCQoOeC9TI2kdqa4+BSgNMNj8v77fdC77Kj5zpWFTJaaAoMbC" crossorigin="anonymous">
 
 </head>
+
 <body>
+
     <!-- parte superior  -->
     <header>
-        <!-- logo  -->
-        <img src="IMG/descarga (3).jpeg" alt="logo de Taylor Swift con su nombre e iniciales">
+
         <!-- navegador  -->
-        <nav > 
-            <ul>
-                <li><a href="shop.html"> <p> Tienda </p> </a> </li>
-                <li> <a href="discos.html"> <p> Eras </p> </a></li>
-                <li> <a href="testimonios.html"> <p> Testimonios </p> </a> </li>
-                <li> <a href="signup.html"> <p> inscribirse </p> </a> </li>
-            </ul>
-     </nav> 
+        <nav class="navbar navbar-expand-lg bg-body-tertiary">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="#">
+
+                    <!-- logo  -->
+                    <img src="IMG/descarga (3).jpeg" alt="logo de Taylor Swift con su nombre e iniciales">
+                    inicio
+                </a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav">
+                        
+                        <!-- link a otros htmls  -->
+                        <li class="nav-item">
+                            <a class="nav-link" href="pages/shop.html"> Tienda </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="pages/signup.html"> Suscribete </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link " href="pages/testimonios.html"> Testimonios </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link " href="pages/discos.html"> discos </a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
     </header>
 
     <!-- contenido principal   -->
-    <main>
-        <h1> Inicio </h1>
-        <h2> ¡ Bienvenidos a la pagina oficial de Taylor Swift ! </h2>
-        <p> Aqui podras encontrar todo lo relacionado con la artista, desde su musica hasta su merchandising </p>
-        <p> Esperamos que disfrutes de tu estadia en nuestra pagina </p>
-        <p> Atte: Taylornation </p>
-        <img src="IMG/taylor-nation.jpg" alt="banner de Taylor Swift" id="banner">
-    </main>
-    
-    <!-- promocion del album -->
-  <div id="promo"> 
-      <section id="promocion"> 
-         <p id="ttpd"> ¡ The Tortured Poets Department ! </p>
-         <h3> Disponible ahora !</h3>
-         <a href="https://open.spotify.com/intl-es/album/5H7ixXZfsNMGbIE5OBSpcb?si=Fm4pO9zGQZGe5qveNrsaUQ" class="promo"> <img src="IMG/pngwing.com.png" alt="logo de spotify"> <p> descarga </p></a> 
-          <a href="https://youtube.com/playlist?list=OLAK5uy_lFbfW_UOra8dYRTa69lxR3fxYjogNtiQw&si=t-XK8dMujQSEBmuv" > <p> transmisión </p> <img src="IMG/youtube-logo-png-46031.png" alt="logo de youtube"></a>
-     </section>
 
-     <!-- imagen y video laterales a promocion del album -->
-     <section id="portada1"> 
-         <video src="VID/Taylor Swift - Fortnight (Official Teaster) Ft. Post Malone - The Tortured Poets Department (360p, h264).mp4" controls > Avance del nuevo video musical de la canción "Fortnight" de Taylor Swift junto a Post Malone</video>
-         <img src="IMG/descarga (2).jpeg" alt="Taylor Swift abriendo su nuevo álbumm - The Tortured Poets Department "> 
-     </section>
-  </div>
-  <!-- footer  -->
-  <footer>
-     <p><img src="IMG/Instagram_icon.png"" alt="logo a color de instagram"> <a href="https://www.instagram.com/taylorswift/" target="_blank"> @Taylorswift </a> </p>
-     <p> <img src="IMG/Gmail_icon_(2020).svg.png" alt="logo a color de gmail"> <a href="https://mail.google.com" target="_blank">Taylornation@gmail.com</a></p>
-     <p> Si está utilizando un lector de pantalla y tiene problemas para utilizar este sitio web, llame al 866-682-4413 para obtener ayuda. </p>
- </footer>
+    <main>
+
+        <section id="contenido-principal">
+            <h1> Inicio </h1>
+            <h2> ¡ Bienvenidos a la pagina oficial de Taylor Swift ! </h2>
+            <p> Aqui podras encontrar todo lo relacionado con la artista, desde su musica hasta su merchandising </p>
+            <p> Esperamos que disfrutes de tu estadia en nuestra pagina </p>
+            <p> Atte: Taylornation </p>
+            <img src="IMG/taylor-nation.jpg" alt="banner de Taylor Swift" id="banner">
+        </section>
+
+        <!-- promocion del album -->
+        <div id="promo">
+            <section id="promocion">
+                <p id="ttpd"> ¡ The Tortured Poets Department ! </p>
+                <h3> Disponible ahora !</h3>
+                <a href="https://open.spotify.com/intl-es/album/5H7ixXZfsNMGbIE5OBSpcb?si=Fm4pO9zGQZGe5qveNrsaUQ"
+                    class="promo"> <img src="IMG/pngwing.com.png" alt="logo de spotify">
+                    <p> descarga </p>
+                </a>
+                <a
+                    href="https://youtube.com/playlist?list=OLAK5uy_lFbfW_UOra8dYRTa69lxR3fxYjogNtiQw&si=t-XK8dMujQSEBmuv">
+                    <p> transmisión </p> <img src="IMG/youtube-logo-png-46031.png" alt="logo de youtube">
+                </a>
+            </section>
+
+            <!-- imagen y video laterales a promocion del album -->
+            <section id="portada1">
+                <video
+                    src="VID/Taylor Swift - Fortnight (Official Teaster) Ft. Post Malone - The Tortured Poets Department (360p, h264).mp4"
+                    controls> Avance del nuevo video musical de la canción "Fortnight" de Taylor Swift junto a Post
+                    Malone</video>
+                <img src="IMG/descarga (2).jpeg"
+                    alt="Taylor Swift abriendo su nuevo álbumm - The Tortured Poets Department ">
+            </section>
+        </div>
+    </main>
+
+    <!-- footer  -->
+    <footer>
+        <p><img src="IMG/Instagram_icon.png"" alt=" logo a color de instagram"> <a
+                href="https://www.instagram.com/taylorswift/" target="_blank"> @Taylorswift </a> </p>
+        <p> <img src="IMG/Gmail_icon_(2020).svg.png" alt="logo a color de gmail"> <a href="https://mail.google.com"
+                target="_blank">Taylornation@gmail.com</a></p>
+        <p> Si está utilizando un lector de pantalla y tiene problemas para utilizar este sitio web, llame al
+            866-682-4413 para obtener ayuda. </p>
+    </footer>
+
+    <!-- link de bootstrap -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.4/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YUe2LzesAfftltw+PEaao2tjU/QATaW/rOitAq67e0CT0Zi2VVRL0oC4+gAaeBKu"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
