--- a/pages/discos.html
+++ b/pages/discos.html
@@ -4,14 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Disgrafica.TaylorSwift</title>
-    <link rel="stylesheet" href="style.css">
+    <!-- css -->
+    <link rel="stylesheet" href="../css/style.css">
+     <!-- bootstrap -->
+     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.4/dist/css/bootstrap.min.css" rel="stylesheet"
+     integrity="sha384-DQvkBjpPgn7RC31MCQoOeC9TI2kdqa4+BSgNMNj8v77fdC77Kj5zpWFTJaaAoMbC" crossorigin="anonymous">
 </head>
 <body>
     <!-- parte superior -->
     <header> 
         <h1> ¡Las eras de Taylor Swift! </h1>
         <nav class="menu">
-            <a href="index.html"> Volver al incio </a>
+            <a href="../index.html"> Volver al incio </a>
         </nav>
         <hr>
      </header>
@@ -19,7 +23,7 @@
      <main>  
           <p> Descubre toda la discografía de Taylor Swift </p>
            <h2 id="spotify">
-                  <img src="IMG/Spotify_logo_without_text.svg.png" alt=" Logo de Spotify">
+                  <img src="../IMG/Spotify_logo_without_text.svg.png" alt=" Logo de Spotify">
              Sumérgete en sus álbumes a través de Spotify: 
             </h2>
     </main>
@@ -47,15 +51,15 @@
           <p>
              <a href="#audio"> - Escuchar</a>
           </p>
-         <img src="IMG/portada-taylor.jpeg" alt="Portada de Taylor Swift con un collage que refleja sus diferentes  eras musicales a lo largo de su carrera ">
-          <audio src="AUD/the-eras-tour-intro.mp3" controls id="audio"> </audio>
+         <img src="../IMG/portada-taylor.jpeg" alt="Portada de Taylor Swift con un collage que refleja sus diferentes  eras musicales a lo largo de su carrera ">
+          <audio src="../AUD/the-eras-tour-intro.mp3" controls id="audio"> </audio>
       </section>
    </div>
 
  <!-- footer  -->
  <footer>
-     <p> <img src="IMG/Instagram_icon.png"" alt="logo a color de instagram"> <a href="https://www.instagram.com/taylorswift/" target="_blank"> @Taylorswift </a> </p>
-     <p> <img src="IMG/Gmail_icon_(2020).svg.png" alt="logo a color de gmail"> <a href="https://mail.google.com" target="_blank">Taylornation@gmail.com</a></p>
+     <p> <img src="../IMG/Instagram_icon.png"" alt="logo a color de instagram"> <a href="https://www.instagram.com/taylorswift/" target="_blank"> @Taylorswift </a> </p>
+     <p> <img src="../IMG/Gmail_icon_(2020).svg.png" alt="logo a color de gmail"> <a href="https://mail.google.com" target="_blank">Taylornation@gmail.com</a></p>
      <p> Si está utilizando un lector de pantalla y tiene problemas para utilizar este sitio web, llame al 866-682-4413 para obtener ayuda. </p>
  </footer>
 </body>
