correccion de enlaces

--- a/pages/shop.html
+++ b/pages/shop.html
@@ -30,11 +30,11 @@
        </tr>
       <tr>
          <!-- fila de imagenes y precios -->
-         <td><img src="img/remera-taylor.jpeg" alt="Remera con un diseño del álbum Midnights con un gráfico principal muestra elementos  relacionados con el mismo, como estrellas, la portada, relojes o frases destacadas."> $15000</td>
-         <td> <img src="IMG/82bc9f0d-f4ba-4ef5-bde0-5c5abf42d922.jpeg" alt="Remera blanca con diseño gráfico que muestra diferentes fotos de Taylor Swift representando sus distintas eras musicales, con la frase "TAYLOR SWIFT THE ERAS TOUR" en la parte inferior."> $15000</td>
-         <td> <img src="IMG/descarga (1).jpeg" alt="Suéter tejido de lana color crema con botones, detalles de líneas negras en los bordes y estrellas grises en las mangas, con la palabra "folklore" bordada en el pecho izquierdo."> $23000 </td>
-         <td> <img src="IMG/sweter-taylor.jpeg" alt="Suéter celeste de Taylor Swift con la inscripción 1989 al frente"> $17000 </td>
-         <td><img src="IMG/1d0838ca-2596-44d6-b924-3a1343424fc5.jpg" alt="Bolsa de tela color beige con asas, que tiene impresa la frase taylor's version en el centro." > 
+         <td><img src="../img/remera-taylor.jpeg" alt="Remera con un diseño del álbum Midnights con un gráfico principal muestra elementos  relacionados con el mismo, como estrellas, la portada, relojes o frases destacadas."> $15000</td>
+         <td> <img src="../img/82bc9f0d-f4ba-4ef5-bde0-5c5abf42d922.jpeg" alt="Remera blanca con diseño gráfico que muestra diferentes fotos de Taylor Swift representando sus distintas eras musicales, con la frase "TAYLOR SWIFT THE ERAS TOUR" en la parte inferior."> $15000</td>
+         <td> <img src="../img/descarga (1).jpeg" alt="Suéter tejido de lana color crema con botones, detalles de líneas negras en los bordes y estrellas grises en las mangas, con la palabra "folklore" bordada en el pecho izquierdo."> $23000 </td>
+         <td> <img src="../img/sweter-taylor.jpeg" alt="Suéter celeste de Taylor Swift con la inscripción 1989 al frente"> $17000 </td>
+         <td><img src="../img/tote-bag-ts.jpeg" alt="Bolsa de tela color beige con asas, que tiene impresa la frase taylor's version en el centro." > 
             $9000 </td>
         </tr> 
     </table>
@@ -46,8 +46,8 @@
     </div>
     <!-- footer  -->
     <footer>
-        <p><img src="IMG/Instagram_icon.png"" alt="logo a color de instagram"> <a href="https://www.instagram.com/taylorswift/" target="_blank"> @Taylorswift </a> </p>
-        <p> <img src="IMG/Gmail_icon_(2020).svg.png" alt="logo a color de gmail"> <a href="https://mail.google.com" target="_blank">Taylornation@gmail.com</a></p>
+        <p><img src="../img/Instagram_icon.png"" alt="logo a color de instagram"> <a href="https://www.instagram.com/taylorswift/" target="_blank"> @Taylorswift </a> </p>
+        <p> <img src="../img/Gmail_icon_(2020).svg.png" alt="logo a color de gmail"> <a href="https://mail.google.com" target="_blank">Taylornation@gmail.com</a></p>
         <p> Si está utilizando un lector de pantalla y tiene problemas para utilizar este sitio web, llame al 866-682-4413 para obtener ayuda. </p>
     </footer>
 </body>
