--- a/index.html
+++ b/index.html
@@ -5,17 +5,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>inicio.TaylorSwift</title>
+    <!-- bootstrap -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.4/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-DQvkBjpPgn7RC31MCQoOeC9TI2kdqa4+BSgNMNj8v77fdC77Kj5zpWFTJaaAoMbC" crossorigin="anonymous">
+
     <!-- font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
         href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap"
         rel="stylesheet">
+
     <!--  CSS -->
-    <link rel="stylesheet" href="style.css">
-    <!-- bootstrap -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.4/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-DQvkBjpPgn7RC31MCQoOeC9TI2kdqa4+BSgNMNj8v77fdC77Kj5zpWFTJaaAoMbC" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/style.css">
 
 </head>
 
@@ -25,13 +27,12 @@
     <header>
 
         <!-- navegador  -->
-        <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <nav class="navbar navbar-expand-lg mi-navbar ">
             <div class="container-fluid">
-                <a class="navbar-brand" href="#">
 
-                    <!-- logo  -->
-                    <img src="IMG/descarga (3).jpeg" alt="logo de Taylor Swift con su nombre e iniciales">
-                    inicio
+                <!-- logo de la pagina  -->
+                <a class="navbar-brand col-10 col-sm-8 col-lg-4" href="#"><img src="img/descarga (3).jpeg"
+                        alt="logo Taylor Swift">
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -39,24 +40,24 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
-                        
-                        <!-- link a otros htmls  -->
+                    
                         <li class="nav-item">
                             <a class="nav-link" href="pages/shop.html"> Tienda </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="pages/signup.html"> Suscribete </a>
+                            <a class="nav-link" href="pages/discos.html"> Discos </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link " href="pages/testimonios.html"> Testimonios </a>
+                            <a class="nav-link " href="pages/testimonios.html"> Testimonios</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link " href="pages/discos.html"> discos </a>
+                            <a class="nav-link " href="pages/signup.html"> Suscribete </a>
                         </li>
                     </ul>
                 </div>
             </div>
         </nav>
+
     </header>
 
     <!-- contenido principal   -->
