--- a/pages/discos.html
+++ b/pages/discos.html
@@ -14,10 +14,31 @@
     <!-- parte superior -->
     <header> 
         <h1> ¡Las eras de Taylor Swift! </h1>
-        <nav class="menu">
-            <a href="../index.html"> Volver al incio </a>
+
+        <!-- nav bar  -->
+
+        <nav class="navbar navbar-expand-lg custom-navbar fixed-top ">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="#">Mi Sitio</a>
+                
+                <!-- Botón del menú hamburguesa -->
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <!-- Contenido del menú -->
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav ms-auto">
+                        <li class="nav-item"><a class="nav-link" href="#">Inicio</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#">Servicios</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#">Contacto</a></li>
+                    </ul>
+                </div>
+            </div>
         </nav>
-        <hr>
+    
+        <!-- Bootstrap JS (para que funcione el menú hamburguesa) -->
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    </body>
      </header>
      <!-- contenido principal -->
      <main>  
