ajuste menu + bt

--- a/index.html
+++ b/index.html
@@ -27,20 +27,25 @@
     <header>
 
         <!-- navegador  -->
-        <nav class="navbar navbar-expand-lg mi-navbar ">
+        <nav class="navbar navbar-expand-lg mi-navbar  ">
             <div class="container-fluid">
+                <div class="logo">
+                    <!-- logo de la pagina  -->
+                    <a class="navbar-brand " href="#"><img src="img/descarga (3).jpeg"
+                            alt="logo Taylor Swift">
+                    </a>
+                </div>
 
-                <!-- logo de la pagina  -->
-                <a class="navbar-brand col-10 col-sm-8 col-lg-4" href="#"><img src="img/descarga (3).jpeg"
-                        alt="logo Taylor Swift">
-                </a>
+                <!-- opciones de menu -->
+
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="collapse navbar-collapse" id="navbarNav">
+
+                <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                     <ul class="navbar-nav">
-                    
+
                         <li class="nav-item">
                             <a class="nav-link" href="pages/shop.html"> Tienda </a>
                         </li>
@@ -55,6 +60,7 @@
                         </li>
                     </ul>
                 </div>
+
             </div>
         </nav>
 
