--- a/pages/shop.html
+++ b/pages/shop.html
@@ -1,54 +1,106 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tienda.TaylorSwift</title>
     <link rel="stylesheet" href="../css/style.css">
 </head>
+
 <body>
     <!-- parte superior  -->
-    <header> 
-        <h1> Tienda </h1>
-        <nav class="menu">
-            <a href="index.html"> Volver a incio </a>
+    <header>
+         <!-- navegador  -->
+         <nav class="navbar navbar-expand-lg mi-navbar  ">
+            <div class="container-fluid">
+                <div class="logo">
+                    <!-- logo de la pagina  -->
+                    <a class="navbar-brand " href="#"><img src="img/descarga (3).jpeg"
+                            alt="logo Taylor Swift">
+                    </a>
+                </div>
+
+                <!-- opciones de menu -->
+
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+
+                <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+                    <ul class="navbar-nav">
+
+                        <li class="nav-item">
+                            <a class="nav-link" href="../index.html"> index </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="pages/discos.html"> Discos </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link " href="pages/testimonios.html"> Testimonios</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link " href="pages/signup.html"> Suscribete </a>
+                        </li>
+                        
+                    </ul>
+                </div>
+
+            </div>
         </nav>
-        <hr>
- </header>
+        <h1> Tienda </h1>
+
+
+    </header>
     <!-- contenido principal -->
-    <main>  <h2> Comprar ahora !</h2>
-     <p> Aquí podras encontrar toda la merchandising de Taylor Swift</p>
+    <main>
+        <h2> Comprar ahora !</h2>
+        <p> Aquí podras encontrar toda la merchandising de Taylor Swift</p>
     </main>
     <table>
         <!-- fila de titulos -->
-       <tr>
-         <th> Remera Midnights </th>
-         <th> Remera The Eras Tour </th>
-         <th> Cardigan Folklore</th>
-         <th> Sweater 1989 </th>
-         <th> Tote bag Taylors version</th>
-       </tr>
-      <tr>
-         <!-- fila de imagenes y precios -->
-         <td><img src="../img/remera-taylor.jpeg" alt="Remera con un diseño del álbum Midnights con un gráfico principal muestra elementos  relacionados con el mismo, como estrellas, la portada, relojes o frases destacadas."> $15000</td>
-         <td> <img src="../img/82bc9f0d-f4ba-4ef5-bde0-5c5abf42d922.jpeg" alt="Remera blanca con diseño gráfico que muestra diferentes fotos de Taylor Swift representando sus distintas eras musicales, con la frase "TAYLOR SWIFT THE ERAS TOUR" en la parte inferior."> $15000</td>
-         <td> <img src="../img/descarga (1).jpeg" alt="Suéter tejido de lana color crema con botones, detalles de líneas negras en los bordes y estrellas grises en las mangas, con la palabra "folklore" bordada en el pecho izquierdo."> $23000 </td>
-         <td> <img src="../img/sweter-taylor.jpeg" alt="Suéter celeste de Taylor Swift con la inscripción 1989 al frente"> $17000 </td>
-         <td><img src="../img/tote-bag-ts.jpeg" alt="Bolsa de tela color beige con asas, que tiene impresa la frase taylor's version en el centro." > 
-            $9000 </td>
-        </tr> 
+        <tr>
+            <th> Remera Midnights </th>
+            <th> Remera The Eras Tour </th>
+            <th> Cardigan Folklore</th>
+            <th> Sweater 1989 </th>
+            <th> Tote bag Taylors version</th>
+        </tr>
+        <tr>
+            <!-- fila de imagenes y precios -->
+            <td><img src="../img/remera-taylor.jpeg"
+                    alt="Remera con un diseño del álbum Midnights con un gráfico principal muestra elementos  relacionados con el mismo, como estrellas, la portada, relojes o frases destacadas.">
+                $15000</td>
+            <td> <img src="../img/82bc9f0d-f4ba-4ef5-bde0-5c5abf42d922.jpeg"
+                    alt="Remera blanca con diseño gráfico que muestra diferentes fotos de Taylor Swift representando sus distintas eras musicales, con la frase "
+                    TAYLOR SWIFT THE ERAS TOUR" en la parte inferior."> $15000</td>
+            <td> <img src="../img/descarga (1).jpeg"
+                    alt="Suéter tejido de lana color crema con botones, detalles de líneas negras en los bordes y estrellas grises en las mangas, con la palabra "
+                    folklore" bordada en el pecho izquierdo."> $23000 </td>
+            <td> <img src="../img/sweter-taylor.jpeg"
+                    alt="Suéter celeste de Taylor Swift con la inscripción 1989 al frente"> $17000 </td>
+            <td><img src="../img/tote-bag-ts.jpeg"
+                    alt="Bolsa de tela color beige con asas, que tiene impresa la frase taylor's version en el centro.">
+                $9000 </td>
+        </tr>
     </table>
     <!-- link a tienda  -->
     <div>
         <h3> ¡ No te quedes sin la tuya !</h3>
-        <p> <a href="https://store.taylorswift.com/?utm_source=Original&utm_campaign=TaylorSwift20190423&utm_medium=direct&utm_referrer=https%3A%2F%2Fwww.taylorswift.com%2F&utm_board=taylor-swift-6767&utm_country=US&utm_linkurl=TaylorSwift.lnk.to%2FStore&lf=0e31e9bbc3ae92431165a263e76a2741" target="_blank" id="tienda"> visitar tienda completa </a> </p>
-        
+        <p> <a href="https://store.taylorswift.com/?utm_source=Original&utm_campaign=TaylorSwift20190423&utm_medium=direct&utm_referrer=https%3A%2F%2Fwww.taylorswift.com%2F&utm_board=taylor-swift-6767&utm_country=US&utm_linkurl=TaylorSwift.lnk.to%2FStore&lf=0e31e9bbc3ae92431165a263e76a2741"
+                target="_blank" id="tienda"> visitar tienda completa </a> </p>
+
     </div>
     <!-- footer  -->
     <footer>
-        <p><img src="../img/Instagram_icon.png"" alt="logo a color de instagram"> <a href="https://www.instagram.com/taylorswift/" target="_blank"> @Taylorswift </a> </p>
-        <p> <img src="../img/Gmail_icon_(2020).svg.png" alt="logo a color de gmail"> <a href="https://mail.google.com" target="_blank">Taylornation@gmail.com</a></p>
-        <p> Si está utilizando un lector de pantalla y tiene problemas para utilizar este sitio web, llame al 866-682-4413 para obtener ayuda. </p>
+        <p><img src="../img/Instagram_icon.png"" alt=" logo a color de instagram"> <a
+                href="https://www.instagram.com/taylorswift/" target="_blank"> @Taylorswift </a> </p>
+        <p> <img src="../img/Gmail_icon_(2020).svg.png" alt="logo a color de gmail"> <a href="https://mail.google.com"
+                target="_blank">Taylornation@gmail.com</a></p>
+        <p> Si está utilizando un lector de pantalla y tiene problemas para utilizar este sitio web, llame al
+            866-682-4413 para obtener ayuda. </p>
     </footer>
 </body>
+
 </html>
