ajustes y declaracion de MQ

--- a/index.html
+++ b/index.html
@@ -31,8 +31,7 @@
             <div class="container-fluid">
                 <div class="logo">
                     <!-- logo de la pagina  -->
-                    <a class="navbar-brand " href="#"><img src="img/descarga (3).jpeg"
-                            alt="logo Taylor Swift">
+                    <a class="navbar-brand " href="#"><img src="img/descarga (3).jpeg" alt="logo Taylor Swift">
                     </a>
                 </div>
 
@@ -68,41 +67,50 @@
 
     <!-- contenido principal   -->
 
-    <main>
+    <main class="main1">
+        <!-- bienvenida  -->
+        <div class="contenido-principal">
 
-        <section id="contenido-principal">
             <h1> Inicio </h1>
             <h2> ¡ Bienvenidos a la pagina oficial de Taylor Swift ! </h2>
             <p> Aqui podras encontrar todo lo relacionado con la artista, desde su musica hasta su merchandising </p>
             <p> Esperamos que disfrutes de tu estadia en nuestra pagina </p>
             <p> Atte: Taylornation </p>
             <img src="IMG/taylor-nation.jpg" alt="banner de Taylor Swift" id="banner">
-        </section>
+        </div>
 
         <!-- promocion del album -->
-        <div id="promo">
-            <section id="promocion">
-                <p id="ttpd"> ¡ The Tortured Poets Department ! </p>
+        <div class="promo">
+            <div class="mitad promocion">
+                <p> ¡ The Tortured Poets Department ! </p>
                 <h3> Disponible ahora !</h3>
-                <a href="https://open.spotify.com/intl-es/album/5H7ixXZfsNMGbIE5OBSpcb?si=Fm4pO9zGQZGe5qveNrsaUQ"
-                    class="promo"> <img src="IMG/pngwing.com.png" alt="logo de spotify">
+
+                <!-- enlaces  -->
+
+                <a href="https://open.spotify.com/intl-es/album/5H7ixXZfsNMGbIE5OBSpcb?si=Fm4pO9zGQZGe5qveNrsaUQ">
+                    <img src="IMG/pngwing.com.png" alt="logo de spotify">
                     <p> descarga </p>
                 </a>
                 <a
                     href="https://youtube.com/playlist?list=OLAK5uy_lFbfW_UOra8dYRTa69lxR3fxYjogNtiQw&si=t-XK8dMujQSEBmuv">
                     <p> transmisión </p> <img src="IMG/youtube-logo-png-46031.png" alt="logo de youtube">
                 </a>
-            </section>
+
+
+
+            </div>
 
             <!-- imagen y video laterales a promocion del album -->
-            <section id="portada1">
+            <div class="mitad portadas">
                 <video
                     src="VID/Taylor Swift - Fortnight (Official Teaster) Ft. Post Malone - The Tortured Poets Department (360p, h264).mp4"
                     controls> Avance del nuevo video musical de la canción "Fortnight" de Taylor Swift junto a Post
-                    Malone</video>
+                    Malone
+                </video>
                 <img src="IMG/descarga (2).jpeg"
-                    alt="Taylor Swift abriendo su nuevo álbumm - The Tortured Poets Department ">
-            </section>
+                    alt="Taylor Swift abriendo su nuevo álbum - The Tortured Poets Department ">
+
+            </div>
         </div>
     </main>
 
