--- a/pages/shop.html
+++ b/pages/shop.html
@@ -15,20 +15,20 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap"
         rel="stylesheet">
-        <!-- css -->
+    <!-- css -->
     <link rel="stylesheet" href="../css/style.css">
 </head>
 
 <body>
+
     <!-- parte superior  -->
     <header>
-         <!-- navegador  -->
-         <nav class="navbar navbar-expand-lg mi-navbar">
+        <!-- navegador  -->
+        <nav class="navbar navbar-expand-lg mi-navbar">
             <div class="container-fluid">
                 <div class="logo">
                     <!-- logo de la pagina  -->
-                    <a class="navbar-brand " href="#"><img src="../img/descarga (3).jpeg"
-                            alt="logo Taylor Swift">
+                    <a class="navbar-brand " href="#"><img src="../img/descarga (3).jpeg" alt="logo Taylor Swift">
                     </a>
                 </div>
 
@@ -68,41 +68,51 @@
     <main>
         <h2> Comprar ahora !</h2>
         <p> Aquí podras encontrar toda la merchandising de Taylor Swift</p>
-    </main>
-    <table>
-        <!-- fila de titulos -->
-        <tr>
-            <th> Remera Midnights </th>
-            <th> Remera The Eras Tour </th>
-            <th> Cardigan Folklore</th>
-            <th> Sweater 1989 </th>
-            <th> Tote bag Taylors version</th>
-        </tr>
-        <tr>
-            <!-- fila de imagenes y precios -->
-            <td><img src="../img/remera-taylor.jpeg"
-                    alt="Remera con un diseño del álbum Midnights con un gráfico principal muestra elementos  relacionados con el mismo, como estrellas, la portada, relojes o frases destacadas.">
-                $15000</td>
-            <td> <img src="../img/82bc9f0d-f4ba-4ef5-bde0-5c5abf42d922.jpeg"
-                    alt="Remera blanca con diseño gráfico que muestra diferentes fotos de Taylor Swift representando sus distintas eras musicales, con la frase "
-                    TAYLOR SWIFT THE ERAS TOUR" en la parte inferior."> $15000</td>
-            <td> <img src="../img/descarga (1).jpeg"
-                    alt="Suéter tejido de lana color crema con botones, detalles de líneas negras en los bordes y estrellas grises en las mangas, con la palabra "
-                    folklore" bordada en el pecho izquierdo."> $23000 </td>
-            <td> <img src="../img/sweter-taylor.jpeg"
-                    alt="Suéter celeste de Taylor Swift con la inscripción 1989 al frente"> $17000 </td>
-            <td><img src="../img/tote-bag-ts.jpeg"
-                    alt="Bolsa de tela color beige con asas, que tiene impresa la frase taylor's version en el centro.">
-                $9000 </td>
-        </tr>
-    </table>
-    <!-- link a tienda  -->
-    <div>
-        <h3> ¡ No te quedes sin la tuya !</h3>
-        <p> <a href="https://store.taylorswift.com/?utm_source=Original&utm_campaign=TaylorSwift20190423&utm_medium=direct&utm_referrer=https%3A%2F%2Fwww.taylorswift.com%2F&utm_board=taylor-swift-6767&utm_country=US&utm_linkurl=TaylorSwift.lnk.to%2FStore&lf=0e31e9bbc3ae92431165a263e76a2741"
-                target="_blank" id="tienda"> visitar tienda completa </a> </p>
 
-    </div>
+        <div class="container">
+            <!-- fila de titulos -->
+            <div class="item">
+                <h3> Remera Midnights </h3>
+                <img src="../img/remera-taylor.jpeg"
+                    alt="Remera con un diseño del álbum Midnights con un gráfico principal muestra elementos  relacionados con el mismo, como estrellas, la portada, relojes o frases destacadas.">
+                <p> $15000 </p>
+            </div>
+            <div class="item">
+                <h3> Remera The Eras Tour </h3>
+                <img src="../img/82bc9f0d-f4ba-4ef5-bde0-5c5abf42d922.jpeg"
+                    alt="Remera blanca con diseño gráfico que muestra diferentes fotos de Taylor Swift representando sus distintas eras musicales, con la frase "
+                    TAYLOR SWIFT THE ERAS TOUR" en la parte inferior."> 
+             <p>$15000</p>
+            </div>
+            <div class="item
+            ">
+                <h3> Cardigan Folklore</h3>
+                <img src="../img/descarga (1).jpeg"
+                    alt="Suéter tejido de lana color crema con botones, detalles de líneas negras en los bordes y estrellas grises en las mangas, con la palabra "
+                    folklore" bordada en el pecho izquierdo."> 
+                    <p> $20000 </p>
+            </div>
+            <div class="item">
+                <h3> Sweater 1989 </h3>
+                <img src="../img/sweter-taylor.jpeg"
+                    alt="Suéter celeste de Taylor Swift con la inscripción 1989 al frente"> 
+                    <p> $17000 </p>
+            </div>
+            <div class="item">
+                <h3> Tote bag Taylors version</hr>
+                    <img src="../img/tote-bag-ts.jpeg"
+                        alt="Bolsa de tela color beige con asas, que tiene impresa la frase taylor's version en el centro.">
+                    <p> $9000 </p>
+            </div> 
+        </div>
+            <!-- link a tienda  -->
+            <div>
+                <h3> ¡ No te quedes sin la tuya !</h3>
+                <p> <a href="https://store.taylorswift.com/?utm_source=Original&utm_campaign=TaylorSwift20190423&utm_medium=direct&utm_referrer=https%3A%2F%2Fwww.taylorswift.com%2F&utm_board=taylor-swift-6767&utm_country=US&utm_linkurl=TaylorSwift.lnk.to%2FStore&lf=0e31e9bbc3ae92431165a263e76a2741"
+                        target="_blank" id="tienda"> visitar tienda completa </a> </p>
+
+            </div>
+    </main>
     <!-- footer  -->
     <footer>
         <p><img src="../img/Instagram_icon.png"" alt=" logo a color de instagram"> <a
