--- a/pages/testimonios.html
+++ b/pages/testimonios.html
@@ -66,60 +66,70 @@
       <h1> Testimonios </h1>
 
    </header>
-   <!-- contenido prinicpal  -->
    <main>
+      <!-- contenido prinicpal  -->
+
       <p> ¡No pierdas la oportunidad de dejar el tuyo!</p>
       <a href="#mensajes"> escribir testimonio </a>
-   </main>
-   <!-- testimonios  -->
-   <section class="testimonios">
-      <article>
-         <h3> Testimonio 1 </h3>
-         <p> "Taylor Swift no es solo una de las artistas más exitosas de nuestro tiempo, sino también una de las más
-            influyentes. Su capacidad para reinventarse con cada álbum, desde el country hasta el pop y el folk, la ha
-            convertido en un fenómeno cultural. Su trabajo no solo es aclamado por la crítica, sino que ha establecido
-            nuevos estándares en la industria musical. No es casualidad que cada uno de sus álbumes se convierta en un
-            evento global." <a
-               href="https://es.rollingstone.com/taylor-swift-la-chica-del-siglo-xxi-que-le-canta-le-habla-y-le-susurra-a-una-nueva-generacion-pop/">–
-               Rolling Stone</a></p>
-      </article>
-      <article>
-         <h3> Testimonio 2 </h3>
-         <p> "Cada vez que Taylor Swift lanza un nuevo álbum, la industria musical se detiene a escuchar. Con una base
-            de fans leales y una estrategia de marketing impecable, ha logrado mantenerse en la cima durante más de una
-            década. Su habilidad para escribir letras que resuenan con la gente y su destreza en la composición la
-            convierten en una de las artistas más importantes de nuestro tiempo. Sus récords en ventas y streaming lo
-            demuestran." <a href="https://www.billboard.com/artist/taylor-swift/">– Billboard</a></p>
-      </article>
-      <article>
-         <h3> Testimonio 3 </h3>
-         <p> "El impacto de Taylor Swift va más allá de la música. Su activismo, su lucha por los derechos de los
-            artistas y su valentía al enfrentar desafíos personales en el ojo público la han convertido en un ícono
-            cultural. Su influencia se extiende al cine, la literatura y hasta la política, demostrando que es mucho más
-            que una estrella del pop. No solo está escribiendo canciones, está escribiendo historia." <a
-               href="https://www.theguardian.com/music/taylor-swift">– The Guardian </a></p>
-      </article>
-      <article>
-         <h3> Testimonio 4 </h3>
-         <p> "Taylor Swift es un fenómeno global y una maestra del storytelling. Su evolución desde ‘Fearless’ hasta
-            ‘Midnights’ demuestra no solo su crecimiento como artista, sino también su capacidad para adaptarse a nuevas
-            tendencias sin perder su esencia. Es una de las pocas artistas que han logrado trascender generaciones, con
-            un impacto que sigue creciendo con cada lanzamiento." <a
-               href="https://www.nytimes.com/search?query=Taylor+Swift">– The New York Times </a></p>
-      </article>
-   </section>
 
-   <!-- espacio para que el usuario pueda dejar uno -->
-   <div>
-      <h4 id="mensajes"> ¡ Deja tu testimonio !</h4>
-      <form action="mailenms0512@gmail.com" method="post">
-         <label for="nombre"> Nombre: </label>
-         <input type="text" name="nombre" id="nombre" required>
-         <label for="mensaje"> Mensaje: </label>
-         <textarea name="mensaje" id="mensaje" required></textarea>
-         <input type="submit" value="Enviar">
+      <!-- testimonios  -->
+      <div class="testimonios">
+         <article>
+            <h3> Testimonio 1 </h3>
+            <p> "Taylor Swift no es solo una de las artistas más exitosas de nuestro tiempo, sino también una de las más
+               influyentes. Su capacidad para reinventarse con cada álbum, desde el country hasta el pop y el folk, la
+               ha
+               convertido en un fenómeno cultural. Su trabajo no solo es aclamado por la crítica, sino que ha
+               establecido
+               nuevos estándares en la industria musical. No es casualidad que cada uno de sus álbumes se convierta en
+               un
+               evento global." <a
+                  href="https://es.rollingstone.com/taylor-swift-la-chica-del-siglo-xxi-que-le-canta-le-habla-y-le-susurra-a-una-nueva-generacion-pop/">–
+                  Rolling Stone</a></p>
+         </article>
+         <article>
+            <h3> Testimonio 2 </h3>
+            <p> "Cada vez que Taylor Swift lanza un nuevo álbum, la industria musical se detiene a escuchar. Con una
+               base
+               de fans leales y una estrategia de marketing impecable, ha logrado mantenerse en la cima durante más de
+               una
+               década. Su habilidad para escribir letras que resuenan con la gente y su destreza en la composición la
+               convierten en una de las artistas más importantes de nuestro tiempo. Sus récords en ventas y streaming lo
+               demuestran." <a href="https://www.billboard.com/artist/taylor-swift/">– Billboard</a></p>
+         </article>
+         <article>
+            <h3> Testimonio 3 </h3>
+            <p> "El impacto de Taylor Swift va más allá de la música. Su activismo, su lucha por los derechos de los
+               artistas y su valentía al enfrentar desafíos personales en el ojo público la han convertido en un ícono
+               cultural. Su influencia se extiende al cine, la literatura y hasta la política, demostrando que es mucho
+               más
+               que una estrella del pop. No solo está escribiendo canciones, está escribiendo historia." <a
+                  href="https://www.theguardian.com/music/taylor-swift">– The Guardian </a></p>
+         </article>
+         <article>
+            <h3> Testimonio 4 </h3>
+            <p> "Taylor Swift es un fenómeno global y una maestra del storytelling. Su evolución desde ‘Fearless’ hasta
+               ‘Midnights’ demuestra no solo su crecimiento como artista, sino también su capacidad para adaptarse a
+               nuevas
+               tendencias sin perder su esencia. Es una de las pocas artistas que han logrado trascender generaciones,
+               con
+               un impacto que sigue creciendo con cada lanzamiento." <a
+                  href="https://www.nytimes.com/search?query=Taylor+Swift">– The New York Times </a></p>
+         </article>
+      </div>
+
+      <!-- espacio para que el usuario pueda dejar uno -->
+      <div>
+         <h4 id="mensajes"> ¡ Deja tu testimonio !</h4>
+         <form action="mailenms0512@gmail.com" method="post">
+            <label for="nombre"> Nombre: </label>
+            <input type="text" name="nombre" id="nombre" required>
+            <label for="mensaje"> Mensaje: </label>
+            <textarea name="mensaje" id="mensaje" required></textarea>
+            <input type="submit" value="Enviar">
          </form>
       </div>
+   </main>
 
    <!-- footer  -->
    <footer>
@@ -133,9 +143,9 @@
 
    <!-- link de bootstrap -->
    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.4/dist/js/bootstrap.bundle.min.js"
-   integrity="sha384-YUe2LzesAfftltw+PEaao2tjU/QATaW/rOitAq67e0CT0Zi2VVRL0oC4+gAaeBKu"
-   crossorigin="anonymous"></script>
-   
+      integrity="sha384-YUe2LzesAfftltw+PEaao2tjU/QATaW/rOitAq67e0CT0Zi2VVRL0oC4+gAaeBKu"
+      crossorigin="anonymous"></script>
+
 
 </body>
 
