ajuste de pags.

--- a/pages/discos.html
+++ b/pages/discos.html
@@ -66,68 +66,75 @@
         <h1> ¡Las eras de Taylor Swift! </h1>
 
     </header>
-
-    <!-- contenido principal -->
     <main>
+        <!-- titulo principal -->
         <p> Descubre toda la discografía de Taylor Swift </p>
-        <h2 id="spotify">
-            <img src="../IMG/Spotify_logo_without_text.svg.png" alt=" Logo de Spotify">
-            Sumérgete en sus álbumes a través de Spotify:
-        </h2>
-    </main>
 
-    <div>
-        <!-- seccion de albumes -->
-        <div class="izquierda">
-            <ol>
-                <li> <a href="https://open.spotify.com/album/5eyZZoQEFQWRHkV2xgAeBw?si=_RWFvNVbQi2awlhKX2e-BA">
-                        <p class="eras"> Taylor Swift </p> ( 2006 )
-                    </a> </li>
-                <li> <a href="https://open.spotify.com/album/08CWGiv27MVQhYpuTtvx83?si=E6tYthJHSra2eYcz2PTiAA">
-                        <p class="eras"> Fearless </p> ( 2008 )
-                    </a> </li>
-                <li> <a href="https://open.spotify.com/album/6Ar2o9KCqcyYF9J0aQP3au?si=sQhenvuwQsC0FfFlT22r-A">
-                        <p class="eras"> Speak Now </p> ( 2010 )
-                    </a> </li>
-                <li> <a href="https://open.spotify.com/album/1EoDsNmgTLtmwe1BDAVxV5?si=2Csiht0DRmCU3RO337qyKA">
-                        <p class="eras"> Red </p> ( 2012 )
-                    </a> </li>
-                <li> <a href="https://open.spotify.com/album/5fy0X0JmZRZnVa2UEicIOl?si=690LjckdSauJejlSnOz-9Q">
-                        <p class="eras"> 1989 </p> ( 2014 )
-                    </a> </li>
-                <li> <a href="https://open.spotify.com/album/6DEjYFkNZh67HP7R9PSZvv?si=neRYxAd-SuOSLkdKcG2Q-w">
-                        <p class="eras"> Reputation </p> ( 2017 )
-                    </a> </li>
-                <li> <a href="https://open.spotify.com/album/1NAmidJlEaVgA3MpcPFYGq?si=ZcuWqLgcTq2CHFPY3R9uVg">
-                        <p class="eras"> Lover </p> ( 2019 )
-                    </a> </li>
-                <li> <a href="https://open.spotify.com/album/2fenSS68JI1h4Fo296JfGr?si=Qa55VbwGSs-UJxg8RLn1sw">
-                        <p class="eras"> Folklore </p> ( 2020 )
-                    </a> </li>
-                <li> <a href="https://open.spotify.com/album/2Xoteh7uEpea4TohMxjtaq?si=4Ry4SRwuR3OaL05O2omaQQ">
-                        <p class="eras"> Evermore </p> ( 2020 )
-                    </a> </li>
-                <li> <a href="https://open.spotify.com/album/151w1FgRZfnKZA9FEcg9Z3?si=jNWVf1VMRreSh_8ZkV9afQ">
-                        <p class="eras"> Midnights </p> ( 2022 )
-                    </a> </li>
-                <li> <a href="https://open.spotify.com/album/1Mo4aZ8pdj6L1jx8zSwJnt?si=-XChVMS4R0af41-8iSvOcw">
-                        <p class="eras"> The Tortured Poets Department </p> ( 2024 )
-                    </a> </li>
-            </ol>
-        </div>
-
-        <!-- seccion de imagen y audio -->
-        <div class="img-discos">
+        <!-- link a audio  -->
+        <div class="link-audio">
             <h3>No te pierdas de la introduccion de las eras en "The Eras Tour !"</h3>
             <p>
                 <a href="#audio"> - Escuchar</a>
             </p>
-            <img src="../IMG/portada-taylor.jpeg"
-                alt="Portada de Taylor Swift con un collage que refleja sus diferentes  eras musicales a lo largo de su carrera ">
+        </div>
+
+        <!-- banner  -->
+        <img src="../img/taylor-nation.jpg" alt="banner de Taylor Swift" id="banner">
+        <h2 id="spotify">
+            <img src="../img/Spotify_logo_without_text.svg.png" alt=" Logo de Spotify">
+            Sumérgete en sus álbumes a través de Spotify:
+        </h2>
+        <div class="laseras">
+            <!-- seccion de albumes -->
+            <div class="izquierda">
+                <ol>
+                    <li> <a href="https://open.spotify.com/album/5eyZZoQEFQWRHkV2xgAeBw?si=_RWFvNVbQi2awlhKX2e-BA">
+                            Taylor Swift (2006) </a> </li>
+                    <li> <a href="https://open.spotify.com/album/08CWGiv27MVQhYpuTtvx83?si=E6tYthJHSra2eYcz2PTiAA">
+                            Fearless (2008)
+                        </a> </li>
+                    <li> <a href="https://open.spotify.com/album/6Ar2o9KCqcyYF9J0aQP3au?si=sQhenvuwQsC0FfFlT22r-A">
+                            Speak Now (2010)
+                        </a> </li>
+                    <li> <a href="https://open.spotify.com/album/1EoDsNmgTLtmwe1BDAVxV5?si=2Csiht0DRmCU3RO337qyKA">
+                            Red (2012)
+                        </a> </li>
+                    <li> <a href="https://open.spotify.com/album/5fy0X0JmZRZnVa2UEicIOl?si=690LjckdSauJejlSnOz-9Q">
+                            1989 (2014)
+                        </a> </li>
+                    <li> <a href="https://open.spotify.com/album/6DEjYFkNZh67HP7R9PSZvv?si=neRYxAd-SuOSLkdKcG2Q-w">
+                            Reputation (2017)
+                        </a> </li>
+                    <li> <a href="https://open.spotify.com/album/1NAmidJlEaVgA3MpcPFYGq?si=ZcuWqLgcTq2CHFPY3R9uVg">
+                            Lover (2019)
+                        </a> </li>
+                    <li> <a href="https://open.spotify.com/album/2fenSS68JI1h4Fo296JfGr?si=Qa55VbwGSs-UJxg8RLn1sw">
+                            Folklore (2020)
+                        </a> </li>
+                    <li> <a href="https://open.spotify.com/album/2Xoteh7uEpea4TohMxjtaq?si=4Ry4SRwuR3OaL05O2omaQQ">
+                            Evermore (2020)
+                        </a> </li>
+                    <li> <a href="https://open.spotify.com/album/151w1FgRZfnKZA9FEcg9Z3?si=jNWVf1VMRreSh_8ZkV9afQ">
+                            Midnights (2022)
+                        </a> </li>
+                    <li> <a href="https://open.spotify.com/album/1Mo4aZ8pdj6L1jx8zSwJnt?si=-XChVMS4R0af41-8iSvOcw">
+                            The Tortured Poets Department (2024)
+                        </a> </li>
+                </ol>
+            </div>
+
+            <!-- seccion de portada -->
+            <div class="derecha">
+                <img src="../IMG/portada-taylor.jpeg"
+                    alt="Portada de Taylor Swift con un collage que refleja sus diferentes  eras musicales a lo largo de su carrera ">
+            </div>
+        </div>
+        <!-- seccion audio -->
+        <div class="audios-discos">
             <audio src="../AUD/the-eras-tour-intro.mp3" controls id="audio"> </audio>
         </div>
-    </div>
 
+    </main>
     <!-- footer  -->
     <footer>
         <p> <img src="../IMG/Instagram_icon.png"" alt=" logo a color de instagram"> <a
