--- a/pages/signup.html
+++ b/pages/signup.html
@@ -69,7 +69,7 @@ rel="stylesheet">
     </p>
   </main>
   <!-- formulario -->
-  <section id="inscripcion">
+  <div id="inscripcion">
     <h3> ¡ Se parte de la Taylor Nation y no te pierdas de las nuevas novedades !</h3>
     <form action="7submit" method="post">
       <!-- nombre  -->
@@ -100,17 +100,20 @@ rel="stylesheet">
       <!-- enviar -->
       <input type="submit" value="enviar" id="enviar">
     </form>
+
+    <!-- banner -->
     <img src="IMG/taylor-nation.jpg" alt="banner de Taylor Swift" id="banner">
-  </section>
+
+  </div>
   <!-- bases y condiciones -->
-  <section id="bases">
+  <div id="bases">
     <h3> terminos y condiciones </h3>
     <p> Al proporcionar esta información, usted opta por recibir correos electrónicos de Taylor Nation con noticias,
       ofertas especiales, promociones y mensajes adaptados a sus intereses, y acepta los Términos y Condiciones de
       UMG/Taylor Nation. política de privacidad y condiciones de usoLos campos marcados con un asterisco (*) son
       obligatorios. Los clientes internacionales recibirán un correo electrónico para confirmar su suscripción a la
       lista de correo mencionada anteriormente</p>
-  </section>
+    </div>
   <!-- footer -->
   <footer>
     <p><img src="IMG/Instagram_icon.png"" alt=" logo a color de instagram"> <a
