--- a/pages/testimonios.html
+++ b/pages/testimonios.html
@@ -70,7 +70,7 @@
       <!-- contenido prinicpal  -->
 
       <p> ¡No pierdas la oportunidad de dejar el tuyo!</p>
-      <a href="#mensajes"> escribir testimonio </a>
+      <a href="#mensajes" id="ir-a-mensajes"> escribir testimonio </a>
 
       <!-- testimonios  -->
       <div class="testimonios">
@@ -83,9 +83,9 @@
                establecido
                nuevos estándares en la industria musical. No es casualidad que cada uno de sus álbumes se convierta en
                un
-               evento global." <a
-                  href="https://es.rollingstone.com/taylor-swift-la-chica-del-siglo-xxi-que-le-canta-le-habla-y-le-susurra-a-una-nueva-generacion-pop/">–
-                  Rolling Stone</a></p>
+               evento global." </p>
+            <a href="https://es.rollingstone.com/taylor-swift-la-chica-del-siglo-xxi-que-le-canta-le-habla-y-le-susurra-a-una-nueva-generacion-pop/">–
+               Rolling Stone</a>
          </article>
          <article>
             <h3> Testimonio 2 </h3>
@@ -95,7 +95,8 @@
                una
                década. Su habilidad para escribir letras que resuenan con la gente y su destreza en la composición la
                convierten en una de las artistas más importantes de nuestro tiempo. Sus récords en ventas y streaming lo
-               demuestran." <a href="https://www.billboard.com/artist/taylor-swift/">– Billboard</a></p>
+               demuestran." </p>
+            <a href="https://www.billboard.com/artist/taylor-swift/">– Billboard</a>
          </article>
          <article>
             <h3> Testimonio 3 </h3>
@@ -103,8 +104,8 @@
                artistas y su valentía al enfrentar desafíos personales en el ojo público la han convertido en un ícono
                cultural. Su influencia se extiende al cine, la literatura y hasta la política, demostrando que es mucho
                más
-               que una estrella del pop. No solo está escribiendo canciones, está escribiendo historia." <a
-                  href="https://www.theguardian.com/music/taylor-swift">– The Guardian </a></p>
+               que una estrella del pop. No solo está escribiendo canciones, está escribiendo historia." </p>
+            <a href="https://www.theguardian.com/music/taylor-swift">– The Guardian </a>
          </article>
          <article>
             <h3> Testimonio 4 </h3>
@@ -113,18 +114,18 @@
                nuevas
                tendencias sin perder su esencia. Es una de las pocas artistas que han logrado trascender generaciones,
                con
-               un impacto que sigue creciendo con cada lanzamiento." <a
-                  href="https://www.nytimes.com/search?query=Taylor+Swift">– The New York Times </a></p>
+               un impacto que sigue creciendo con cada lanzamiento." </p>
+            <a href="https://www.nytimes.com/search?query=Taylor+Swift">– The New York Times </a>
          </article>
       </div>
 
       <!-- espacio para que el usuario pueda dejar uno -->
-      <div>
-         <h4 id="mensajes"> ¡ Deja tu testimonio !</h4>
+      <div id="mensajes" >
+         <h4 > ¡ Deja tu testimonio !</h4>
          <form action="mailenms0512@gmail.com" method="post">
-            <label for="nombre"> Nombre: </label>
+            <label for="nombre" class="label"> Nombre: </label>
             <input type="text" name="nombre" id="nombre" required>
-            <label for="mensaje"> Mensaje: </label>
+            <label for="mensaje" class="label"> Mensaje: </label>
             <textarea name="mensaje" id="mensaje" required></textarea>
             <input type="submit" value="Enviar">
          </form>
@@ -133,9 +134,9 @@
 
    <!-- footer  -->
    <footer>
-      <p><img src="IMG/Instagram_icon.png"" alt=" logo a color de instagram"> <a
+      <p><img src="../img/Instagram_icon.png"" alt=" logo a color de instagram"> <a
             href="https://www.instagram.com/taylorswift/" target="_blank"> @Taylorswift </a> </p>
-      <p> <img src="IMG/Gmail_icon_(2020).svg.png" alt="logo a color de gmail"> <a href="https://mail.google.com"
+      <p> <img src="../img/Gmail_icon_(2020).svg.png" alt="logo a color de gmail"> <a href="https://mail.google.com"
             target="_blank">Taylornation@gmail.com</a></p>
       <p> Si está utilizando un lector de pantalla y tiene problemas para utilizar este sitio web, llame al 866-682-4413
          para obtener ayuda. </p>
