correccion de titulos

--- a/pages/shop.html
+++ b/pages/shop.html
@@ -52,7 +52,7 @@
                             <a class="nav-link " href="./testimonios.html"> Testimonios</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link " href="./signup.html"> Suscribete </a>
+                            <a class="nav-link " href="./signup.html"> inscribirse </a>
                         </li>
 
                     </ul>
