--- a/pages/signup.html
+++ b/pages/signup.html
@@ -5,16 +5,16 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title> inscripcion.TaylorSwift </title>
-<!-- bootstrap -->
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.4/dist/css/bootstrap.min.css" rel="stylesheet"
-integrity="sha384-DQvkBjpPgn7RC31MCQoOeC9TI2kdqa4+BSgNMNj8v77fdC77Kj5zpWFTJaaAoMbC" crossorigin="anonymous">
+  <!-- bootstrap -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.4/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-DQvkBjpPgn7RC31MCQoOeC9TI2kdqa4+BSgNMNj8v77fdC77Kj5zpWFTJaaAoMbC" crossorigin="anonymous">
 
-<!-- font -->
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link
-href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap"
-rel="stylesheet">
+  <!-- font -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap"
+    rel="stylesheet">
   <!-- css -->
   <link rel="stylesheet" href="../css/style.css">
 </head>
@@ -67,66 +67,68 @@ rel="stylesheet">
     <p> previo a inscribirte debes aceptar nuestras Terminos y condiciones:
       <a href="#bases"> Terminos y condicion </a>
     </p>
-  </main>
-  <!-- formulario -->
-  <div id="inscripcion">
-    <h3> ¡ Se parte de la Taylor Nation y no te pierdas de las nuevas novedades !</h3>
-    <form action="7submit" method="post">
-      <!-- nombre  -->
-      <label for="nombre" class="label"> Nombre: </label>
-      <input type="text" name="nombre" id="nombre" required>
-      <!-- genero -->
-      <label for="genero" class="label"> Género: </label>
-      <label for=""> Hombre</label>
-      <input type="radio" name="" id="">
-      <label for="">Mujer</label>
-      <input type="radio" name="" id="">
-      <label for="">Prefiero no decir</label>
-      <input type="radio" name="" id="">
-      <!-- correo -->
-      <label for="correo" class="label"> Correo electrónico: </label>
-      <input type="email" name="correo" id="correo" required>
-      <!-- pais -->
-      <label for="pais" class="label">País</label>
-      <select name="" id="" id="pais">
-        <option value="">Argentina</option>
-        <option value="">Brasil</option>
-        <option value="">Chile</option>
-        <option value="">Colombia</option>
-        <option value="">Ecuador</option>
-        <option value="">México</option>
-        <option value=""> Peru </option>
-      </select>
-      <!-- enviar -->
-      <input type="submit" value="enviar" id="enviar">
-    </form>
 
-    <!-- banner -->
-    <img src="IMG/taylor-nation.jpg" alt="banner de Taylor Swift" id="banner">
+    <!-- formulario -->
+    <div id="inscripcion">
+      <h3> ¡ Se parte de la Taylor Nation y no te pierdas de las nuevas novedades !</h3>
+      <form action="7submit" method="post">
+        <!-- nombre  -->
+        <label for="nombre" class="label"> Nombre: </label>
+        <input type="text" name="nombre" id="nombre" required>
+        <!-- genero -->
+        <label for="genero" class="label"> Género: </label>
+        <label for=""> Hombre</label>
+        <input type="radio" name="" id="">
+        <label for="">Mujer</label>
+        <input type="radio" name="" id="">
+        <label for="">Prefiero no decir</label>
+        <input type="radio" name="" id="">
+        <!-- correo -->
+        <label for="correo" class="label"> Correo electrónico: </label>
+        <input type="email" name="correo" id="correo" required>
+        <!-- pais -->
+        <label for="pais" class="label">País</label>
+        <select name="" id="" id="pais">
+          <option value="">Argentina</option>
+          <option value="">Brasil</option>
+          <option value="">Chile</option>
+          <option value="">Colombia</option>
+          <option value="">Ecuador</option>
+          <option value="">México</option>
+          <option value=""> Peru </option>
+        </select>
+        <!-- enviar -->
+        <input type="submit" value="enviar" id="enviar">
+      </form>
 
-  </div>
-  <!-- bases y condiciones -->
-  <div id="bases">
-    <h3> terminos y condiciones </h3>
-    <p> Al proporcionar esta información, usted opta por recibir correos electrónicos de Taylor Nation con noticias,
-      ofertas especiales, promociones y mensajes adaptados a sus intereses, y acepta los Términos y Condiciones de
-      UMG/Taylor Nation. política de privacidad y condiciones de usoLos campos marcados con un asterisco (*) son
-      obligatorios. Los clientes internacionales recibirán un correo electrónico para confirmar su suscripción a la
-      lista de correo mencionada anteriormente</p>
+
+      <!-- banner -->
+      <img src="../img/taylor-nation.jpg" alt="banner de Taylor Swift" id="banner">
+
     </div>
+    <!-- bases y condiciones -->
+    <div id="bases">
+      <h3> terminos y condiciones </h3>
+      <p> Al proporcionar esta información, usted opta por recibir correos electrónicos de Taylor Nation con noticias,
+        ofertas especiales, promociones y mensajes adaptados a sus intereses, y acepta los Términos y Condiciones de
+        UMG/Taylor Nation. política de privacidad y condiciones de usoLos campos marcados con un asterisco (*) son
+        obligatorios. Los clientes internacionales recibirán un correo electrónico para confirmar su suscripción a la
+        lista de correo mencionada anteriormente</p>
+    </div>
+  </main>
   <!-- footer -->
   <footer>
-    <p><img src="IMG/Instagram_icon.png"" alt=" logo a color de instagram"> <a
+    <p><img src="../img/Instagram_icon.png"" alt=" logo a color de instagram"> <a
         href="https://www.instagram.com/taylorswift/" target="_blank"> @Taylorswift </a> </p>
-    <p> <img src="IMG/Gmail_icon_(2020).svg.png" alt="logo a color de gmail"> <a href="https://mail.google.com"
+    <p> <img src="../img/Gmail_icon_(2020).svg.png" alt="logo a color de gmail"> <a href="https://mail.google.com"
         target="_blank">Taylornation@gmail.com</a></p>
     <p> Si está utilizando un lector de pantalla y tiene problemas para utilizar este sitio web, llame al 866-682-4413
       para obtener ayuda. </p>
   </footer>
   <!-- link de bootstrap -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.4/dist/js/bootstrap.bundle.min.js"
-  integrity="sha384-YUe2LzesAfftltw+PEaao2tjU/QATaW/rOitAq67e0CT0Zi2VVRL0oC4+gAaeBKu"
-  crossorigin="anonymous"></script>
+    integrity="sha384-YUe2LzesAfftltw+PEaao2tjU/QATaW/rOitAq67e0CT0Zi2VVRL0oC4+gAaeBKu"
+    crossorigin="anonymous"></script>
 </body>
 
 </html>
