--- a/pages/testimonios.html
+++ b/pages/testimonios.html
@@ -56,7 +56,7 @@
                      <a class="nav-link" href="./discos.html"> Discos </a>
                   </li>
                   <li class="nav-item">
-                     <a class="nav-link " href="./signup.html"> Suscribete </a>
+                     <a class="nav-link " href="./signup.html"> inscribirse </a>
                   </li>
                </ul>
             </div>
