--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         rel="stylesheet">
 
     <!--  CSS -->
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="./css/style.css">
 
 </head>
 
