cambio de nombres de carpetas

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             <p> Aqui podras encontrar todo lo relacionado con la artista, desde su musica hasta su merchandising </p>
             <p> Esperamos que disfrutes de tu estadia en nuestra pagina </p>
             <p> Atte: Taylornation </p>
-            <img src="IMG/taylor-nation.jpg" alt="banner de Taylor Swift" id="banner">
+            <img src="img/taylor-nation.jpg" alt="banner de Taylor Swift" id="banner">
         </div>
 
         <!-- promocion del album -->
@@ -88,12 +88,12 @@
                 <!-- enlaces  -->
 
                 <a href="https://open.spotify.com/intl-es/album/5H7ixXZfsNMGbIE5OBSpcb?si=Fm4pO9zGQZGe5qveNrsaUQ">
-                    <img src="IMG/pngwing.com.png" alt="logo de spotify">
+                    <img src="img/pngwing.com.png" alt="logo de spotify">
                     <p> descarga </p>
                 </a>
                 <a
                     href="https://youtube.com/playlist?list=OLAK5uy_lFbfW_UOra8dYRTa69lxR3fxYjogNtiQw&si=t-XK8dMujQSEBmuv">
-                    <p> transmisión </p> <img src="IMG/youtube-logo-png-46031.png" alt="logo de youtube">
+                    <p> transmisión </p> <img src="img/youtube-logo-png-46031.png" alt="logo de youtube">
                 </a>
 
 
@@ -103,11 +103,11 @@
             <!-- imagen y video laterales a promocion del album -->
             <div class="mitad portadas">
                 <video
-                    src="VID/Taylor Swift - Fortnight (Official Teaster) Ft. Post Malone - The Tortured Poets Department (360p, h264).mp4"
+                    src="vid/Taylor Swift - Fortnight (Official Teaster) Ft. Post Malone - The Tortured Poets Department (360p, h264).mp4"
                     controls> Avance del nuevo video musical de la canción "Fortnight" de Taylor Swift junto a Post
                     Malone
                 </video>
-                <img src="IMG/descarga (2).jpeg"
+                <img src="img/descarga (2).jpeg"
                     alt="Taylor Swift abriendo su nuevo álbum - The Tortured Poets Department ">
 
             </div>
@@ -116,9 +116,9 @@
 
     <!-- footer  -->
     <footer>
-        <p><img src="IMG/Instagram_icon.png"" alt=" logo a color de instagram"> <a
+        <p><img src="img/Instagram_icon.png"" alt=" logo a color de instagram"> <a
                 href="https://www.instagram.com/taylorswift/" target="_blank"> @Taylorswift </a> </p>
-        <p> <img src="IMG/Gmail_icon_(2020).svg.png" alt="logo a color de gmail"> <a href="https://mail.google.com"
+        <p> <img src="img/Gmail_icon_(2020).svg.png" alt="logo a color de gmail"> <a href="https://mail.google.com"
                 target="_blank">Taylornation@gmail.com</a></p>
         <p> Si está utilizando un lector de pantalla y tiene problemas para utilizar este sitio web, llame al
             866-682-4413 para obtener ayuda. </p>
